--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body {
 }
 .single-product {
   padding: 10px;
-  transition: 0.6s;
+  transition: 0.7s;
+  height: 500px;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
