--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+.navbar-color {
+  background-color: rgba(155, 153, 153, 0.26);
+}
+.navbar-brand-color {
+  color: #ff843a;
+}
 .search-field:hover {
   outline: 2px solid gray;
   border: none;
